syntax = "proto3";

package com.taxi.grpc.passenger;

option java_multiple_files = true;
option java_package = "com.taxi.grpc.passenger";
option java_outer_classname = "PassengerProto";


message PassengerIdRequest {
  int64 passenger_id = 1;
}

message PassengerExistsRequest {
  int64 passenger_id = 1;
}

message PassengerResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message PassengerExistsResponse {
  bool exists = 1;
}


service PassengerService {

  rpc GetPassenger(PassengerIdRequest) returns (PassengerResponse);

  rpc CheckPassengerExists(PassengerExistsRequest) returns (PassengerExistsResponse);

}